--- a/list-charities/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html
+++ b/list-charities/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/listes-autres-donataires-reconnus/liste-organismes-bienfaisance-enregistres-situes-a-etranger-ont-recu-majeste-chef-canada.html"/>
 	
@@ -285,9 +285,9 @@ List of foreign charities that have received a gift from His Majesty in right of
 
     
         <p>A foreign charity that has received a gift from His Majesty in right of Canada (the Government of Canada) and is registered by the Canada Revenue Agency (<abbr title="Canada Revenue Agency">CRA</abbr>) is a qualified donee for a specific period. As a qualified donee, it can issue donation receipts and registered charities can make gifts to it.</p>
-<p>As a result of changes to the Income Tax Act that came into effect between <span class="nowrap">January 1, 2012</span>, and <span class="nowrap">June 23, 2015</span>, the eligibility criteria and qualified donee period of these foreign charities changed. For information, go to the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/foreign-charities-that-have-received-a-gift-majesty-right-canada-summary-recent-legislative-changes.html">Summary of recent legislative changes</a>&nbsp;(archived).</p>
+<p>As a result of changes to the Income Tax Act that came into effect between <span class="nowrap">January 1, 2012</span>, and <span class="nowrap">June 23, 2015</span>, the eligibility criteria and qualified donee period of these foreign charities changed. For information, go to the <a href="https://cra-design.github.io/charities/charities/policies-guidance/foreign-charities-that-have-received-a-gift-majesty-right-canada-summary-recent-legislative-changes.html">Summary of recent legislative changes</a>&nbsp;(archived).</p>
 <p>Use the lists below to find out if a foreign charity that received a gift from His Majesty in right of Canada is <a href="#current">currently registered</a> or was <a href="#previous">previously registered</a> as a qualified donee after December 31, 2012, or whether it was a <a href="#prev_recip">recipient of a gift from His Majesty in right of Canada before <span class="nowrap">January 1, 2013</span></a>.</p>
-<p>To find out about the obligations of foreign charities as qualified donees, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">Advantages and obligations of applying for qualified donee status</a>.</p>
+<p>To find out about the obligations of foreign charities as qualified donees, go to <a href="https://cra-design.github.io/charities/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">Advantages and obligations of applying for qualified donee status</a>.</p>
 <p>&nbsp;</p>
 
     
