--- a/list-charities/list-registered-journalism-organizations.html
+++ b/list-charities/list-registered-journalism-organizations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/listes-autres-donataires-reconnus/liste-organisations-journalistiques-enregistrees.html"/>
 	
@@ -281,7 +281,7 @@ List of registered journalism organizations</h1>
         <p>Use the&nbsp;table below to confirm whether a journalism organization is registered as a qualified donee or if its qualified donee status has been revoked.</p>
 <p>A <strong>registered</strong> journalism organization (RJO) is a qualified donee; therefore, it can issue official donation receipts and the Income Tax Act also allows registered charities to make gifts to an <abbr title="Registered journalism organization">RJO</abbr>.</p>
 <p>A <strong>revoked</strong> journalism organization is no longer a qualified donee; therefore, it cannot issue official donation receipts, and is not eligible to receive gifts from registered charities.</p>
-<p>To find out&nbsp;about the obligations of these qualified donees, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">Advantages and obligations of applying for qualified donee status</a>.</p>
+<p>To find out&nbsp;about the obligations of these qualified donees, go to <a href="https://cra-design.github.io/charities/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">Advantages and obligations of applying for qualified donee status</a>.</p>
 
     
 
