--- a/about-charities-directorate/what-we-heard.html
+++ b/about-charities-directorate/what-we-heard.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/what-we-heard.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/what-we-heard.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-charities-directorate/what-we-heard.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-charities-directorate/what-we-heard.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/a-propos-direction-organismes-bienfaisance/ce-que-nous-avons-entendu.html"/>
 	
@@ -282,7 +282,7 @@ What we heard: 2019 online consultation</h1>
 <ul>
 <li>Direct email distribution to various stakeholders from the charity sector using the <abbr title="Canada Revenue Agency">CRA</abbr>'s charities electronic mailing list.</li>
 <li>Social media platforms such as Twitter and Facebook</li>
-<li>Promotion at in-person spring <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/charities-information-sessions.html">charities information sessions</a>, held in 15 cities with over 1,350 participants.</li>
+<li>Promotion at in-person spring <a href="https://cra-design.github.io/charities/guidance-videos-forms/charities-information-sessions.html">charities information sessions</a>, held in 15 cities with over 1,350 participants.</li>
 </ul>
 <h3>What we heard</h3>
 <ul>
@@ -292,7 +292,7 @@ What we heard: 2019 online consultation</h1>
 <li>Respondents said the website was helpful and a great resource for members of the sector, in general.</li>
 <li>When asked to rank communications and outreach activities, most users were satisfied while others remained neutral.</li>
 <li>Respondents who reviewed the videos and infographics said that they are appreciated tools, and design preferences varied.</li>
-<li>Respondents said that social media is their least preferred channel of communication, which is consistent with informal feedback obtained at <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/charities-information-sessions.html">charities information sessions</a> in spring 2019.</li>
+<li>Respondents said that social media is their least preferred channel of communication, which is consistent with informal feedback obtained at <a href="https://cra-design.github.io/charities/guidance-videos-forms/charities-information-sessions.html">charities information sessions</a> in spring 2019.</li>
 <li>Many respondents prefer to be contacted by email and find most information by visiting the website.</li>
 <li>Respondents viewed enhanced web content on the Charities and giving webpages, as well as videos and graphic educational tools as key to the <abbr title="Canada Revenue Agency">CRA</abbr>’s outreach and educational efforts.</li>
 </ul>
