--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/a-propos-organismes-bienfaisance-enregistres/quelle-est-difference-entre-organisme-bienfaisance-enregistre-organisme-sans-lucratif.html"/>
 	
@@ -462,7 +462,7 @@ What is the difference between a registered charity and a non-profit organizatio
 </td>
 </tr><tr><td><span>Charitable registration number</span></td>
 <td><ul>
-<li><span>is issued a charitable <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html"><span>registration number</span></a> once approved by the <abbr title="Canada Revenue Agency">CRA</abbr></span></li>
+<li><span>is issued a charitable <a href="https://cra-design.github.io/charities/charities/operating-a-registered-charity/registration-number.html"><span>registration number</span></a> once approved by the <abbr title="Canada Revenue Agency">CRA</abbr></span></li>
 </ul>
 </td>
 <td><ul>
@@ -480,7 +480,7 @@ What is the difference between a registered charity and a non-profit organizatio
 </td>
 </tr><tr><td><span>Spending requirement (disbursement quota)</span></td>
 <td><ul>
-<li><span>must spend a minimum amount on its own charitable activities or as gifts to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#qualdonee"><span>qualified donees</span></a></span></li>
+<li><span>must spend a minimum amount on its own charitable activities or as gifts to <a href="https://cra-design.github.io/charities/charities/charities-giving-glossary.html#qualdonee"><span>qualified donees</span></a></span></li>
 </ul>
 </td>
 <td><ul>
