--- a/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html
+++ b/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/trousse-medias-organismes-bienfaisance/programme-organismes-bienfaisance-gouvernement-appuie-activement-secteur-bienfaisance.html"/>
 	
