--- a/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html
+++ b/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/listes-controle-organismes-bienfaisance/taxe-produits-services-taxe-vente-harmonisee-tps-tvh-liste-controle.html"/>
 	
